# fl-privacy-attacks

./: .gitignore  README.md  pyproject.toml
apps/: streamlit_app.py
config/: settings.yaml
src/flpa/: __init__.py  client.py  client_app.py  config.py  dataset.py  main.py  model.py  models.py  server_app.py  task.py  utils.py
src/flpa/attacks/: build_membership_dataset.py  evaluate_fed_mia.py  extract_posteriors.py  fedmia_attack.py  merge_fedmia_and_posteriors.py  run_attack_pipeline.py  run_fed_mia.py  train_attack_model.py
src/flpa/attacks/activations_based/: extract_activations.py  train_attack_model.py  train_attacl_model.py
src/flpa/attacks/base/: build_membership_dataset.py
src/flpa/attacks/fusion_posterior_and_gradient/: merge_fusion_features.py  train_attack_model.py
src/flpa/attacks/gradient_based/: extract_gradients.py  train_attack_model.py
src/flpa/attacks/posterior/: extract_posteriors.py  train_attack_model.py
src/flpa/config/: settings.py
src/flpa/fed_strategies/: logging_base.py  logging_fedadam.py  logging_fedavg.py
