[project]
name = "flpa"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Het Parekh", email = "hetparekh16@gmail.com" }
]
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.2",
    "flwr-datasets[vision]>=0.5.0",
    "flwr[simulation]>=1.18.0",
    "loguru>=0.7.3",
    "polars>=1.29.0",
    "pydantic>=2.11.3",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["./src/flpa"]

[dependency-groups]
eda = [
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.4.0",
    "jupytext>=1.17.0",
    "marimo>=0.13.2",
]

[tool.flwr.app]
publisher = "het"

[tool.flwr.app.components]
serverapp = "flpa.server_app:app"
clientapp = "flpa.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.5
local-epochs = 1


[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
