[project]
name = "flpa"
version = "1.0.0"
description = "Add your description here"
authors = [
    { name = "Het Parekh", email = "hetparekh16@gmail.com" }
]
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.2",
    "flwr-datasets[vision]>=0.5.0",
    "flwr[simulation]>=1.18.0",
    "loguru>=0.7.3",
    "polars>=1.29.0",
    "pydantic>=2.11.3",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "multidict>=6.4.3",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "streamlit>=1.45.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flpa"]

[dependency-groups]
eda = [
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.4.0",
    "jupytext>=1.17.0",
    "marimo>=0.13.2",
]

[tool.flwr.app]
publisher = "het"

[tool.flwr.app.components]
serverapp = "flpa.server_app:app"
clientapp = "flpa.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 22
fraction-fit = 0.5
local-epochs = 50
learning-rate = 0.001


[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 12

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 12
options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2CPUs
options.backend.client-resources.num-gpus = 0.2 # at most 5 ClientApp will run in a given GPU